--- a/book/yesod-web-framework-book/creating-a-subsite/creating-a-subsite.dita
+++ b/book/yesod-web-framework-book/creating-a-subsite/creating-a-subsite.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html><h1>Creating a Subsite</h1><p id="i1" class="hascomments">How many sites provide authentication systems? Or need to provide CRUD (CRUD) management of some objects? Or a blog? Or a wiki?</p><p id="i2" class="hascomments">The theme here is that many websites include common components that can be reused throughout multiple sites. However, it is often quite difficult to get code to be modular enough to be truly plug-and-play: a component will require hooks into the routing system, usually for multiple routes, and will need some way of sharing styling information with the master site.</p><p id="i3" class="hascomments">In Yesod, the solution is subsites. A subsite is a collection of routes and their handlers that can be easily inserted into a master site. By using type classes, it is easy to ensure that the master site provides certain capabilities, and to access the default site layout. And with type-safe URLs, it's easy to link from the master site to subsites.</p><h2>Hello World</h2><p id="hw1" class="hascomments">Writing subsites is a little bit tricky, involving a number of different types. Let's start off with a simple Hello World subsite:</p><pre id="x1">-- START
+<html><h1>Creating a Subsite</h1><p id="i1" class="hascomments">How many sites provide authentication systems? Or need to provide CRUD (CRUD) management of some objects? Or a blog? Or a wiki?</p><p id="i2" class="hascomments">The theme here is that many websites include common components that can be reused throughout multiple sites. However, it is often quite difficult to get code to be modular enough to be truly plug-and-play: a component will require hooks into the routing system, usually for multiple routes, and will need some way of sharing styling information with the master site.</p><p id="i3" class="hascomments">In Yesod, the solution is subsites. A subsite is a collection of routes and their handlers that can be easily inserted into a master site. By using type classes, it is easy to ensure that the master site provides certain capabilities, and to access the default site layout. And with type-safe URLs, it's easy to link from the master site to subsites.</p><h2>Hello World</h2><p id="hw1" class="hascomments">Writing subsites is a little bit tricky, involving a number of different types. Let's start off with a simple Hello World subsite:</p><pre id="x1"><code>-- START
 {-# LANGUAGE QuasiQuotes, TypeFamilies, MultiParamTypeClasses #-}
 {-# LANGUAGE TemplateHaskell, FlexibleInstances, OverloadedStrings #-}
 import Yesod
@@ -40,4 +40,4 @@ getRootR = defaultLayout [whamlet|
 |]
 
 main = warpDebug 3000 $ Master HelloSub
-</pre><p id="hw2" class="hascomments">This very simple example actually shows most of the complications involved in creating a subsite. Like a normal Yesod application, everything in a subsite is centered around a foundation datatype, HelloSub in our case. We then use mkYesodSub, in much the same way that we use mkYesod, to create the route datatype and the dispatch/render functions. (We'll come back to that extra parameter in a second.)</p><p id="hw3" class="hascomments">What's interesting is the type signature of getSubRootR. Up until now, we have tried to ignore the GHandler datatype, or if we need to acknowledge its existence, pretend like the first two type arguments are always the same. Now we get to finally acknowledge the truth about this funny datatype.</p><p id="hw4" class="hascomments">A handler function always has two foundation types associated with it: the subsite and the master site. When you write a normal application, those two datatypes are the same. However, when you are working in a subsite, they will necessarily be different. So the type signature for getSubRootR uses HelloSub for the first argument and master for the second.</p><p id="hw5" class="hascomments">The defaultLayout function is part of the Yesod typeclass. Therefore, in order to call it, the master type argument must be an instance of Yesod. The advantage of this approach is that any modifications to the master site's defaultLayout method will automatically be reflected in subsites.</p><p id="hw6" class="hascomments">When we embed a subsite in our master site route definition, we need to specify four pieces of information: the route to use as the base of the subsite (in this case, /subsite), the constructor for the subsite routes (SubsiteR), the subsite foundation data type (HelloSub) and a function that takes a master foundation value and returns a subsite foundation value (getHelloSub).</p><p id="hw7" class="hascomments">In the definition of getRootR, we can see how the route constructor gets used. In a sense, SubsiteR promotes any subsite route to a master site route, making it possible to safely link to it from any master site template.</p></html>
+</code></pre><p id="hw2" class="hascomments">This very simple example actually shows most of the complications involved in creating a subsite. Like a normal Yesod application, everything in a subsite is centered around a foundation datatype, HelloSub in our case. We then use mkYesodSub, in much the same way that we use mkYesod, to create the route datatype and the dispatch/render functions. (We'll come back to that extra parameter in a second.)</p><p id="hw3" class="hascomments">What's interesting is the type signature of getSubRootR. Up until now, we have tried to ignore the GHandler datatype, or if we need to acknowledge its existence, pretend like the first two type arguments are always the same. Now we get to finally acknowledge the truth about this funny datatype.</p><p id="hw4" class="hascomments">A handler function always has two foundation types associated with it: the subsite and the master site. When you write a normal application, those two datatypes are the same. However, when you are working in a subsite, they will necessarily be different. So the type signature for getSubRootR uses HelloSub for the first argument and master for the second.</p><p id="hw5" class="hascomments">The defaultLayout function is part of the Yesod typeclass. Therefore, in order to call it, the master type argument must be an instance of Yesod. The advantage of this approach is that any modifications to the master site's defaultLayout method will automatically be reflected in subsites.</p><p id="hw6" class="hascomments">When we embed a subsite in our master site route definition, we need to specify four pieces of information: the route to use as the base of the subsite (in this case, /subsite), the constructor for the subsite routes (SubsiteR), the subsite foundation data type (HelloSub) and a function that takes a master foundation value and returns a subsite foundation value (getHelloSub).</p><p id="hw7" class="hascomments">In the definition of getRootR, we can see how the route constructor gets used. In a sense, SubsiteR promotes any subsite route to a master site route, making it possible to safely link to it from any master site template.</p></html>
