--- a/book/yesod-web-framework-book/web-application-interface/web-application-interface.dita
+++ b/book/yesod-web-framework-book/web-application-interface/web-application-interface.dita
@@ -34,7 +34,7 @@
             we use ByteStrings in place of Builders. There is a record inside Request called
                 requestBody, with type BufferedSource IO
                 ByteString. We can use all of the standard conduit functions to interact
-            with this source.</p><p id="reqbod3" class="hascomments">The request body could in theory contain any type of data, but the most common are URL encoded and multipart form data. The wai-extra package contains built-in support for parsing these in a memory-efficient manner.</p><h2>Hello World</h2><p id="helloworld1" class="hascomments">To demonstrate the simplicity of WAI, let's look at a hello world example. In this example, we're going to use the OverloadedStrings language extension to avoid explicitly packing string values into bytestrings.</p><pre id="x1">{-# LANGUAGE OverloadedStrings #-}
+            with this source.</p><p id="reqbod3" class="hascomments">The request body could in theory contain any type of data, but the most common are URL encoded and multipart form data. The wai-extra package contains built-in support for parsing these in a memory-efficient manner.</p><h2>Hello World</h2><p id="helloworld1" class="hascomments">To demonstrate the simplicity of WAI, let's look at a hello world example. In this example, we're going to use the OverloadedStrings language extension to avoid explicitly packing string values into bytestrings.</p><pre id="x1"><code>{-# LANGUAGE OverloadedStrings #-}
 import Network.Wai
 import Network.HTTP.Types (status200)
 import Network.Wai.Handler.Warp (run)
@@ -42,14 +42,14 @@ import Network.Wai.Handler.Warp (run)
 application _ = return $
   responseLBS status200 [("Content-Type", "text/plain")] "Hello World"
 
-main = run 3000 application</pre><p id="helloworld2" class="hascomments">Lines 2 through 4 perform our imports. Warp is provided by the warp package, and is the premiere WAI backend. WAI is also built on top of the http-types package, which provides a number of datatypes and convenience values, including status200.</p><p id="helloworld3" class="hascomments">First we define our application. Since we don't care about the specific request parameters, we ignore the argument to the function. For any request, we are returning a response with status code 200 ("OK"), and text/plain content type and a body containing the words "Hello World". Pretty straight-forward.</p><h2>Middleware</h2><p id="middleware1" class="hascomments">In addition to allowing our applications to run on multiple backends without code changes, the WAI allows us another benefits: middleware. Middleware is essentially an <dfn id="x1">application transformer</dfn>, taking one application and returning another one.</p><p id="middleware2" class="hascomments">Middleware components can be used to provide lots of services: cleaning up URLs,
+main = run 3000 application</code></pre><p id="helloworld2" class="hascomments">Lines 2 through 4 perform our imports. Warp is provided by the warp package, and is the premiere WAI backend. WAI is also built on top of the http-types package, which provides a number of datatypes and convenience values, including status200.</p><p id="helloworld3" class="hascomments">First we define our application. Since we don't care about the specific request parameters, we ignore the argument to the function. For any request, we are returning a response with status code 200 ("OK"), and text/plain content type and a body containing the words "Hello World". Pretty straight-forward.</p><h2>Middleware</h2><p id="middleware1" class="hascomments">In addition to allowing our applications to run on multiple backends without code changes, the WAI allows us another benefits: middleware. Middleware is essentially an <dfn id="x1">application transformer</dfn>, taking one application and returning another one.</p><p id="middleware2" class="hascomments">Middleware components can be used to provide lots of services: cleaning up URLs,
                                                   authentication, caching, JSON-P requests. But
                                                   perhaps the most useful and most intuitive
                                                   middleware is gzip compression. The middleware
                                                   works very simply: it parses the request headers
                                                   to determine if a client supports compression, and
                                                   if so compresses the response body and adds the
-                                                  appropriate response header.</p><p id="middleware3" class="hascomments">The great thing about middlewares is that they are unobtrusive. Let's see how we would apply the gzip middleware to our hello world application.</p><pre id="x2">{-# LANGUAGE OverloadedStrings #-}
+                                                  appropriate response header.</p><p id="middleware3" class="hascomments">The great thing about middlewares is that they are unobtrusive. Let's see how we would apply the gzip middleware to our hello world application.</p><pre id="x2"><code>{-# LANGUAGE OverloadedStrings #-}
 import Network.Wai
 import Network.Wai.Handler.Warp (run)
 import Network.Wai.Middleware.Gzip (gzip, def)
@@ -58,4 +58,4 @@ import Network.HTTP.Types (status200)
 application _ = return $ responseLBS status200 [("Content-Type", "text/plain")]
                        "Hello World"
 
-main = run 3000 $ gzip def application</pre><p id="middleware4" class="hascomments">We added an import line to actually have access to the middleware, and then simply applied gzip to our application. You can also chain together multiple middlewares: a line such as gzip False $ jsonp $ othermiddleware $ myapplication is perfectly valid. One word of warning: the order the middleware is applied can be important. For example, jsonp needs to work on uncompressed data, so if you apply it after you apply gzip, you'll have trouble.</p></html>
+main = run 3000 $ gzip def application</code></pre><p id="middleware4" class="hascomments">We added an import line to actually have access to the middleware, and then simply applied gzip to our application. You can also chain together multiple middlewares: a line such as gzip False $ jsonp $ othermiddleware $ myapplication is perfectly valid. One word of warning: the order the middleware is applied can be important. For example, jsonp needs to work on uncompressed data, so if you apply it after you apply gzip, you'll have trouble.</p></html>
