--- a/book/settings-types.dita
+++ b/book/settings-types.dita
@@ -2,48 +2,48 @@
 <html><h1>Settings Types</h1>
   <p class="hascomments">Let's say you're writing a webserver. You want the server to take a port to listen on, and an
    application to run. So you create the following function:</p>
-  <pre>run :: Int -&gt; Application -&gt; IO ()</pre>
+  <pre><code>run :: Int -&gt; Application -&gt; IO ()</code></pre>
   <p class="hascomments">But suddenly you realize that some people will want to customize their timeout durations. So
    you modify your API:</p>
-  <pre>run :: Int -&gt; Int -&gt; Application -&gt; IO ()</pre>
+  <pre><code>run :: Int -&gt; Int -&gt; Application -&gt; IO ()</code></pre>
   <p class="hascomments">So, which Int is the timeout, and which is the port? Well, you could create
    some type aliases, or comment your code. But there's another problem creeping into our code: this
     run function is getting unmanageable. Soon we'll need to take an extra
    parameter to indicate how exceptions should be handled, and then another one to control which
    host to bind to, and so on.</p>
   <p class="hascomments">So a more extensible solution is to introduce a settings datatype:</p>
-  <pre>data Settings = Settings
+  <pre><code>data Settings = Settings
     { settingsPort :: Int
     , settingsHost :: String
     , settingsTimeout :: Int
-    }</pre>
+    }</code></pre>
   <p class="hascomments">And this makes the calling code almost self-documenting:</p>
-  <pre>run Settings
+  <pre><code>run Settings
     { settingsPort = 8080
     , settingsHost = "127.0.0.1"
     , settingsTimeout = 30
-    } myApp</pre>
+    } myApp</code></pre>
   <p class="hascomments">Great, couldn't be clearer, right? True, but what happens when you have 50 settings to your
    webserver. Do you really want to have to specify all of those each time? Of course not. So
    instead, the webserver should provide a set of defaults:</p>
-  <pre>defaultSettings = Settings 3000 "127.0.0.1" 30</pre>
+  <pre><code>defaultSettings = Settings 3000 "127.0.0.1" 30</code></pre>
   <p class="hascomments">And now, instead of needing to write that long bit of code above, we can get away with:</p>
-  <pre>run defaultSettings { settingsPort = 8080 } myApp -- (1)</pre>
+  <pre><code>run defaultSettings { settingsPort = 8080 } myApp -- (1)</code></pre>
   <p class="hascomments">This is great, except for one minor hitch. Let's say we now decide to add an extra record to
     Settings. Any code out in the wild looking like
-   this:<pre>run (Settings 8080 "127.0.0.1" 30) myApp -- (2)</pre>will
+   this:<pre><code>run (Settings 8080 "127.0.0.1" 30) myApp -- (2)</code></pre>will
    be broken, since the Settings constructor now takes 4 arguments. The proper
    thing to do would be to bump the major version number so that dependent packages don't get
    broken. But having to change major versions for every minor setting you add is a nuisance. The
    solution? Don't export the Settings constructor:</p>
-  <pre>module MyServer
+  <pre><code>module MyServer
     ( Settings
     , settingsPort
     , settingsHost
     , settingsTimeout
     , run
     , defaultSettings
-    ) where</pre>
+    ) where</code></pre>
   <p class="hascomments">With this approach, no one can write code like (2), so you can freely add new records without
    any fear of code breaking.</p>
   <p class="hascomments">The one downside of this approach is that it's not immediately obvious from the Haddocks that
