--- a/book/yesod-web-framework-book/routing-and-handlers/routing-and-handlers.dita
+++ b/book/yesod-web-framework-book/routing-and-handlers/routing-and-handlers.dita
@@ -10,16 +10,16 @@
             advantage of making the code not only easy to write, but simple enough for someone with
             no Yesod experience to read and understand the sitemap of your application.</p>
         <p id="x-4" class="hascomments">A basic example of this syntax is:</p>
-        <pre id="x-5">/             RootR     GET
+        <pre id="x-5"><code>/             RootR     GET
 /blog         BlogR     GET POST
 /blog/#BlogId BlogPostR GET POST
 
-/static       StaticR   Static getStatic</pre>
+/static       StaticR   Static getStatic</code></pre>
         <p id="x-6" class="hascomments">The next few sections will explain the full details of what goes on in the route
             declaration.</p>
     <h3>Pieces</h3><p id="pieces1" class="hascomments">One of the first thing Yesod does when it gets a request is split up the requested
-            path into pieces. The pieces are tokenized at all forward slashes. For example:</p><pre id="x2">toPieces "/" = []
-toPieces "/foo/bar/baz/" = ["foo", "bar", "baz", ""]</pre><p id="pieces2" class="hascomments">You may notice that there are some funny things going on with trailing slashes, or
+            path into pieces. The pieces are tokenized at all forward slashes. For example:</p><pre id="x2"><code>toPieces "/" = []
+toPieces "/foo/bar/baz/" = ["foo", "bar", "baz", ""]</code></pre><p id="pieces2" class="hascomments">You may notice that there are some funny things going on with trailing slashes, or
             double slashes ("/foo//bar//"), or a few other things. Yesod believes in having <dfn id="x3">canonical URLs</dfn>; if someone requests a URL with a trailing slash, or
             with a double slash, they automatically get a redirect to the canonical version. This
             ensures you have one URL for one resource, and can help with your search rankings.</p><p id="pieces3" class="hascomments">What this means for you is that you needn't concern yourself
@@ -28,7 +28,7 @@ toPieces "/foo/bar/baz/" = ["foo", "bar", "baz", ""]</pre><p id="pieces2" class=
                 intercalating the slashes and escaping problematic
                 characters.</p><p id="pieces4" class="hascomments">If, by the way, you want more fine-tuned control of how paths are split into pieces
             and joined together again, you'll want to look at the cleanPath and
-                joinPath methods in the <a href="../../yesod-web-framework-book/yesod-typeclass/yesod-typeclass.dita" id="x4">Yesod typeclass</a> chapter.</p><h4>Types of Pieces</h4><p id="pieces5" class="hascomments">When you are declaring your routes, you have three types of pieces at your disposal:</p><dl id="x1"><dt id="x3">Static</dt><dd id="x4">This is a plain string that must be matched against precisely in the URL.</dd><dt id="x6">Dynamic single</dt><dd id="x7">This is a single piece (ie, between two forward slashes), but can be a user-submitted value. This is the primary method of receiving extra user input on a page request. These pieces begin with a hash (#) and are followed by a data type. The datatype must be an instance of PathPiece.</dd><dt id="x10">Dynamic multi</dt><dd id="x11">The same as before, but can receive multiple pieces of the URL. This must always be the last piece in a resource pattern. It is specified by an asterisk (*) followed by a datatype, which must be an instance of PathMultiPiece. Multi pieces are not as common as the other two, though they are very important for implementing features like static trees representing file structure or wikis with arbitrary hierarchies.</dd></dl><p id="pieces6" class="hascomments">Let us take a look at some standard kinds of resource patterns you may want to write. Starting simply, the root of an application will just be /. Similarly, you may want to place your FAQ at /page/faq.</p><p id="pieces7" class="hascomments">Now let's say you are going to write a Fibonacci website. You may construct your URLs like /fib/#Int. But there's a slight problem with this: we do not want to allow negative numbers or zero to be passed into our application. Fortunately, the type system can protect us:</p><pre id="x16">{-# LANGUAGE TypeFamilies, QuasiQuotes, GeneralizedNewtypeDeriving #-}
+                joinPath methods in the <a href="../../yesod-web-framework-book/yesod-typeclass/yesod-typeclass.dita" id="x4">Yesod typeclass</a> chapter.</p><h4>Types of Pieces</h4><p id="pieces5" class="hascomments">When you are declaring your routes, you have three types of pieces at your disposal:</p><dl id="x1"><dt id="x3">Static</dt><dd id="x4">This is a plain string that must be matched against precisely in the URL.</dd><dt id="x6">Dynamic single</dt><dd id="x7">This is a single piece (ie, between two forward slashes), but can be a user-submitted value. This is the primary method of receiving extra user input on a page request. These pieces begin with a hash (#) and are followed by a data type. The datatype must be an instance of PathPiece.</dd><dt id="x10">Dynamic multi</dt><dd id="x11">The same as before, but can receive multiple pieces of the URL. This must always be the last piece in a resource pattern. It is specified by an asterisk (*) followed by a datatype, which must be an instance of PathMultiPiece. Multi pieces are not as common as the other two, though they are very important for implementing features like static trees representing file structure or wikis with arbitrary hierarchies.</dd></dl><p id="pieces6" class="hascomments">Let us take a look at some standard kinds of resource patterns you may want to write. Starting simply, the root of an application will just be /. Similarly, you may want to place your FAQ at /page/faq.</p><p id="pieces7" class="hascomments">Now let's say you are going to write a Fibonacci website. You may construct your URLs like /fib/#Int. But there's a slight problem with this: we do not want to allow negative numbers or zero to be passed into our application. Fortunately, the type system can protect us:</p><pre id="x16"><code>{-# LANGUAGE TypeFamilies, QuasiQuotes, GeneralizedNewtypeDeriving #-}
 {-# LANGUAGE MultiParamTypeClasses, TemplateHaskell #-}
 {-# LANGUAGE OverloadedStrings #-}
 import Yesod
@@ -57,7 +57,7 @@ fibs = 1 : 1 : zipWith (+) fibs (tail fibs)
 getFibsR :: Natural -&gt; GHandler Fibs Fibs RepPlain
 getFibsR (Natural i) = return $ RepPlain $ toContent $ show $ fibs !! (i - 1)
 main = warpDebug 3000 Fibs
-</pre><p id="pieces8" class="hascomments">On line 1 we define a simple newtype wrapper around Int to protect ourselves from
+</code></pre><p id="pieces8" class="hascomments">On line 1 we define a simple newtype wrapper around Int to protect ourselves from
             invalid input. We can see that PathPiece is a typeclass with two
             methods. toPathPiece does nothing more than convert to a
                 Text. fromPathPiece
@@ -70,7 +70,7 @@ main = warpDebug 3000 Fibs
             we could use an approach like <a href="http://www.haskell.org/haskellwiki/Smart_constructors" id="x-5">smart constructors</a>. For the purposes of this example, we've
             kept the code simple.</aside><p id="pieces10" class="hascomments">Defining a PathMultiPiece is just as simple. Let's say we want to
             have a Wiki with at least two levels of hierarchy; we might define a datatype such
-            as:</p><pre id="x23">{-# LANGUAGE TypeFamilies, QuasiQuotes, TemplateHaskell #-}
+            as:</p><pre id="x23"><code>{-# LANGUAGE TypeFamilies, QuasiQuotes, TemplateHaskell #-}
 {-# LANGUAGE OverloadedStrings #-}
 import Yesod
 import Data.Text (Text)
@@ -83,7 +83,7 @@ instance PathMultiPiece Page where
     fromPathMultiPiece (x:y:z) = Just $ Page x y z
     fromPathMultiPiece _ = Nothing
 -- STOP
-main = return ()</pre><h3>Resource name</h3><p id="rn1" class="hascomments">Each resource pattern also has a name associated with it. That
+main = return ()</code></pre><h3>Resource name</h3><p id="rn1" class="hascomments">Each resource pattern also has a name associated with it. That
                 name will become the constructor for the <dfn id="x1">type safe
                     URL</dfn> datatype associated with your application.
                 Therefore, it has to start with a capital letter. By
@@ -99,9 +99,9 @@ main = return ()</pre><h3>Resource name</h3><p id="rn1" class="hascomments">Each
                     URL. As an example, that value PersonR
                         "Michael" may not resolve to a valid page if
                     there is no Michael in the database.</p></aside><p id="rn4" class="hascomments">Let's get some real examples going here. If you had the resource patterns /person/#Text named PersonR, /year/#Int named YearR and /page/faq named FaqR, you would end up with a
-            route data type roughly looking like:</p><pre id="x11">data MyRoute = PersonR Text
+            route data type roughly looking like:</p><pre id="x11"><code>data MyRoute = PersonR Text
              | YearR Int
-             | FaqR</pre><p id="rn5" class="hascomments">If a user requests the relative URL of
+             | FaqR</code></pre><p id="rn5" class="hascomments">If a user requests the relative URL of
                  /year/2009, Yesod will convert it into the value
                  YearR 2009. /person/Michael becomes
                  PersonR "Michael" and /page/faq
@@ -120,7 +120,7 @@ main = return ()</pre><h3>Resource name</h3><p id="rn1" class="hascomments">Each
                  most commonly used subsite is the static subsite, which serves
                  static files for your application. In order to serve static
                  files from /static, you would need a resource
-                 line like:</p><pre id="x14">/static StaticR Static getStatic</pre><p id="rn11" class="hascomments">In this line, /static just says where in your URL
+                 line like:</p><pre id="x14"><code>/static StaticR Static getStatic</code></pre><p id="rn11" class="hascomments">In this line, /static just says where in your URL
                  structure to serve the static files from. There is nothing
                  magical about the word static, you could easily replace it
                  with /my/non-dynamic/files.</p><p id="rn12" class="hascomments">The next word, StaticR, gives the resource name. The next two words
@@ -130,7 +130,7 @@ main = return ()</pre><h3>Resource name</h3><p id="rn1" class="hascomments">Each
                  will look more closely at the static subsite in the <a href="../../yesod-web-framework-book/scaffolding-and-the-site-template/scaffolding-and-the-site-template.dita" id="x21">scaffolded site chapter</a>.</p><h2>Dispatch</h2><p id="dispatch1" class="hascomments">Once you have specified your routes, Yesod will take care of all the pesky details
             of URL dispatch for you. You just need to make sure to provide the appropriate <dfn id="x1">handler functions</dfn>. For subsite routes, you do not need to write any
             handler functions, but you do for the other two. We mentioned the naming rules above
-                (MyHandlerR GET becomes getMyHandlerR, MyOtherHandlerR becomes handleMyOtherHandlerR). Now we need the type signature.</p><h3>Return Type</h3><p id="dispatch2" class="hascomments">Let's look at a simple handler function:</p><pre id="x1">{-# LANGUAGE TypeFamilies, QuasiQuotes #-}
+                (MyHandlerR GET becomes getMyHandlerR, MyOtherHandlerR becomes handleMyOtherHandlerR). Now we need the type signature.</p><h3>Return Type</h3><p id="dispatch2" class="hascomments">Let's look at a simple handler function:</p><pre id="x1"><code>{-# LANGUAGE TypeFamilies, QuasiQuotes #-}
 {-# LANGUAGE MultiParamTypeClasses, TemplateHaskell #-}
 {-# LANGUAGE OverloadedStrings #-}
 import Yesod
@@ -146,7 +146,7 @@ getHomeR = defaultLayout [whamlet|&lt;h1&gt;This is simple
 -- STOP
 instance Yesod Simple
 main = warpDebug 3000 Simple
-</pre><p id="dispatch3" class="hascomments">Look at the type signature of getHomeR. The first component is
+</code></pre><p id="dispatch3" class="hascomments">Look at the type signature of getHomeR. The first component is
                 Handler. Handler is a special monad that
             all handler functions live in. It provides access to request information, let's you send
             redirects, and lots of other stuff we'll <a href="../../yesod-web-framework-book/routing-and-handlers/routing-and-handlers.dita#file87-the-ghandler-monadrouting-and-handlers" id="x-4">get to
@@ -164,7 +164,7 @@ main = warpDebug 3000 Simple
                 RepHtml, which only provide one representation.</p><h3>Arguments</h3><p id="arguments1" class="hascomments">Not every route is as simple as the HomeR we just defined. Take
             for instance our PersonR route from earlier. The name of the person
             needs to be passed to the handler function. This translation is very straight-forward,
-            and hopefully intuitive. For example:</p><pre id="x1">{-# LANGUAGE TypeFamilies, QuasiQuotes #-}
+            and hopefully intuitive. For example:</p><pre id="x1"><code>{-# LANGUAGE TypeFamilies, QuasiQuotes #-}
 {-# LANGUAGE MultiParamTypeClasses, TemplateHaskell #-}
 {-# LANGUAGE OverloadedStrings #-}
 import Yesod
@@ -191,7 +191,7 @@ getWikiR = return . RepPlain . toContent . T.unwords
 -- STOP
 instance Yesod Args
 main = warpDebug 3000 Args
-</pre><p id="arguments2" class="hascomments">The arguments have the types of the dynamic pieces for each route, in the order specified. Also, notice how we are able to use both RepHtml and RepPlain.</p><h2>The Handler Monad</h2><p id="ghandler1" class="hascomments">The vast majority of code you write in Yesod sits in the Handler
+</code></pre><p id="arguments2" class="hascomments">The arguments have the types of the dynamic pieces for each route, in the order specified. Also, notice how we are able to use both RepHtml and RepPlain.</p><h2>The Handler Monad</h2><p id="ghandler1" class="hascomments">The vast majority of code you write in Yesod sits in the Handler
             monad. If you are approaching this from an MVC (Model-View-Controller) background, your
                 Handler code is the Controller. Some important points to know about
                 Handler:</p><ul id="x1">
